# secure-pip

./: Cargo.toml  default.nix
src/: main.rs
